Added views and controller

--- a/CSC237_JNure_FinalProject/Views/Home/Index.cshtml
+++ b/CSC237_JNure_FinalProject/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["OnTimeLimo"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center ">
+    <h3 class="display-4">Welcome to On Time Limo service, it is our pleasure to give you service!</h3>
+   <p> please look to our affordable service.</p>
 </div>
+
